[package]
name = "texas-holdem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
queue = "0.3.1"
rand = "0.9.0-alpha.1"
combinations = "0.1.0"
colored = "2.1.0"
rocket = "0.5.1"
tokio = { version = "1.38.0", features = ["full"]}
tokio-tungstenite = "0.23.0"
serde_json = "1.0.117"
serde = { version = "1.0.203", features = ["derive"] }
getset = "0.1.1"
